# screensavers-storm

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  build_helpers.rs
.github/workflows/: ci.yml
assets/: local76-storm.desktop  local76-storm.xml  scene-storm.desktop  scene-storm.xml
scripts/: build.sh  release.sh  test.sh
src/: main.rs  runner.rs  screensaver_shim.rs  storm.rs  tests_perf.rs
src/runner/: args.rs  mod.rs  platform_helpers.rs  renderer.rs  screensaver_runner.rs  terminal_guard.rs
src/runner/apps/: identity.rs  identity.rs.metadata.json  mod.rs.metadata.json
src/runner/core/: logo_block.rs  mod.rs  screen_palette.rs  screensaver.rs
src/runner/toolkit/: linux_proc.rs  linux_queries.rs  mod.rs  platform.rs  sys_info.rs
src/storm/: draw.rs  mod.rs  physics.rs  types.rs
src/storm/draw/: entities.rs  helpers.rs  mod.rs  rain_lightning.rs
src/storm/physics/: animals.rs  bird.rs  drops.rs  entities.rs  lightning.rs  scenery.rs
